# endfr-ai

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  TODO  endf_parser.cpp  endf_parser.h  main.cpp  n-001_H_001.reconr  opencode.json
test1/: input
